@@ -33,7 +33,7 @@ if (isset($_GET['ticketid']) && !empty($_GET['ticketid'])) {
     $eventticketid = intval($_GET['ticketid']);
 }
 
-if (isset($_POST['event']['helpdesk']) && isset($_POST['ticket'])) {
+if (isset($_POST['event']['helpdesk']) == 1 && isset($_POST['ticket'])) {
     $ticket = $_POST['ticket'];
 }
 
@@ -130,8 +130,21 @@ if (isset($_POST['event'])) {
 
     $event['private'] = isset($event['private']) ? 1 : 0;
 
-    if (!empty($event['helpdesk']) && !count($ticket['categories'])) {
-            $error['categories'] = trans('You have to select category!');
+    switch ($event['helpdesk']) {
+        case 'new':
+            if (!count($ticket['categories'])) {
+                $error['categories'] = trans('You have to select category!');
+            }
+            break;
+        case 'assign':
+            if (!preg_match('/^[0-9]+$/', $event['ticketid'])) {
+                $error['ticketid'] = trans('Ticket identifier invalid format!');
+            } elseif (!$LMS->TicketExists($event['ticketid'])) {
+                $error['ticketid'] = trans('Nonexistent ticket!');
+            } elseif (!($LMS->checkTicketAccess($event['ticketid']) & RT_RIGHT_READ)) {
+                $error['ticketid'] = trans('Ticket access denied!');
+            }
+            break;
     }
 
     if ($ticket['requestor_userid'] == '0') {
@@ -164,136 +177,141 @@ if (isset($_POST['event'])) {
         $event['address_id'] = !isset($event['address_id']) || $event['address_id'] == -1 ? null : $event['address_id'];
         $event['nodeid'] = !isset($event['nodeid']) || empty($event['nodeid']) ? null : $event['nodeid'];
 
-        if (isset($event['helpdesk'])) {
-            $ticket['customerid'] = $event['customerid'];
-            $ticket['body'] = $event['description'];
-            $ticket['subject'] = $event['title'];
-            $ticket['address_id'] = $event['address_id'];
-            $ticket['nodeid'] = $event['nodeid'];
+        switch ($event['helpdesk']) {
+            case 'new':
+                $ticket['customerid'] = $event['customerid'];
+                $ticket['body'] = $event['description'];
+                $ticket['subject'] = $event['title'];
+                $ticket['address_id'] = $event['address_id'];
+                $ticket['nodeid'] = $event['nodeid'];
 
-            if (!empty($ticket['requestor_userid'])) {
-                $ticket['requestor'] = '';
-                $ticket['requestor_mail'] = null;
-                $ticket['requestor_phone'] = null;
-            } else {
-                $ticket['requestor_userid'] = null;
-                $ticket['requestor'] = empty($ticket['requestor_name']) ? '' : $ticket['requestor_name'];
-                $ticket['requestor_mail'] = empty($ticket['requestor_mail']) ? null : $ticket['requestor_mail'];
-                $ticket['requestor_phone'] = empty($ticket['requestor_phone']) ? null : $ticket['requestor_phone'];
-            }
-
-            if (empty($ticket['deadline'])) {
-                $ticket['deadline'] = null;
-            } else {
-                $ticket['deadline'] = $dtime;
-            }
-
-            $event['ticketid'] = $LMS->TicketAdd($ticket);
-
-            if (ConfigHelper::checkConfig('phpui.newticket_notify')) {
-                $user = $LMS->GetUserInfo(Auth::GetCurrentUser());
-
-                $helpdesk_sender_name = ConfigHelper::getConfig('phpui.helpdesk_sender_name');
-                if (!empty($helpdesk_sender_name)) {
-                    $mailfname = $helpdesk_sender_name;
-
-                    if ($mailfname == 'queue') {
-                        $mailfname = $LMS->GetQueueName($ticket['queue']);
-                    } elseif ($mailfname == 'user') {
-                        $mailfname = $user['name'];
-                    }
-                    $mailfname = '"'.$mailfname.'"';
+                if (!empty($ticket['requestor_userid'])) {
+                    $ticket['requestor'] = '';
+                    $ticket['requestor_mail'] = null;
+                    $ticket['requestor_phone'] = null;
                 } else {
-                    $mailfname = '';
+                    $ticket['requestor_userid'] = null;
+                    $ticket['requestor'] = empty($ticket['requestor_name']) ? '' : $ticket['requestor_name'];
+                    $ticket['requestor_mail'] = empty($ticket['requestor_mail']) ? null : $ticket['requestor_mail'];
+                    $ticket['requestor_phone'] = empty($ticket['requestor_phone']) ? null : $ticket['requestor_phone'];
                 }
 
-                $mailfrom = $LMS->DetermineSenderEmail($user['email'], $LMS->GetQueueEmail($ticket['queue']), $ticket['mailfrom']);
+                if (empty($ticket['deadline'])) {
+                    $ticket['deadline'] = null;
+                } else {
+                    $ticket['deadline'] = $dtime;
+                }
 
-                $ticketdata = $LMS->GetTicketContents($event['ticketid']);
+                $event['ticketid'] = $LMS->TicketAdd($ticket);
 
-                $headers['From'] = $mailfname.' <'.$mailfrom.'>';
-                $headers['Reply-To'] = $headers['From'];
-                $headers['Message-ID'] = $LMS->GetLastMessageID();
+                if (ConfigHelper::checkConfig('phpui.newticket_notify')) {
+                    $user = $LMS->GetUserInfo(Auth::GetCurrentUser());
 
-                $queuedata = $LMS->GetQueue($ticket['queue']);
+                    $helpdesk_sender_name = ConfigHelper::getConfig('phpui.helpdesk_sender_name');
+                    if (!empty($helpdesk_sender_name)) {
+                        $mailfname = $helpdesk_sender_name;
 
-                if ($ticket['customerid']) {
-                    $info = $LMS->GetCustomer($ticket['customerid'], true);
-
-                    $emails = array_map(function ($contact) {
-                        return $contact['fullname'];
-                    }, $LMS->GetCustomerContacts($ticket['customerid'], CONTACT_EMAIL));
-                    $phones = array_map(function ($contact) {
-                        return $contact['fullname'];
-                    }, $LMS->GetCustomerContacts($ticket['customerid'], CONTACT_LANDLINE | CONTACT_MOBILE));
-
-                    if (ConfigHelper::checkConfig('phpui.helpdesk_customerinfo')) {
-                        $params = array(
-                            'id' => $id,
-                            'customerid' => $ticket['customerid'],
-                            'customer' => $info,
-                            'emails' => $emails,
-                            'phones' => $phones,
-                        );
-                        $mail_customerinfo = $LMS->ReplaceNotificationCustomerSymbols(
-                            ConfigHelper::getConfig('phpui.helpdesk_customerinfo_mail_body'),
-                            $params
-                        );
-                        $sms_customerinfo = $LMS->ReplaceNotificationCustomerSymbols(
-                            ConfigHelper::getConfig('phpui.helpdesk_customerinfo_sms_body'),
-                            $params
-                        );
-                    }
-
-                    if (isset($event['customernotify']) && !empty($queuedata['newticketsubject']) && !empty($queuedata['newticketbody'])
-                        && !empty($emails)) {
-                        $custmail_subject = $queuedata['newticketsubject'];
-                        $custmail_subject = str_replace('%tid', $id, $custmail_subject);
-                        $custmail_subject = str_replace('%title', $ticket['subject'], $custmail_subject);
-                        $custmail_body = $queuedata['newticketbody'];
-                        $custmail_body = str_replace('%tid', $id, $custmail_body);
-                        $custmail_body = str_replace('%cid', $ticket['customerid'], $custmail_body);
-                        $custmail_body = str_replace('%pin', $info['pin'], $custmail_body);
-                        $custmail_body = str_replace('%customername', $info['customername'], $custmail_body);
-                        $custmail_body = str_replace('%title', $ticket['subject'], $custmail_body);
-                        $custmail_headers = array(
-                            'From' => $headers['From'],
-                            'Reply-To' => $headers['From'],
-                            'Subject' => $custmail_subject,
-                        );
-                        foreach ($emails as $email) {
-                            $custmail_headers['To'] = '<' . $info['email'] . '>';
-                            $LMS->SendMail($email, $custmail_headers, $custmail_body);
+                        if ($mailfname == 'queue') {
+                            $mailfname = $LMS->GetQueueName($ticket['queue']);
+                        } elseif ($mailfname == 'user') {
+                            $mailfname = $user['name'];
                         }
+                        $mailfname = '"'.$mailfname.'"';
+                    } else {
+                        $mailfname = '';
                     }
-                } elseif (!empty($requestor) && ConfigHelper::checkConfig('phpui.helpdesk_customerinfo')) {
-                    $mail_customerinfo = "\n\n-- \n" . trans('Customer:') . ' ' . $requestor;
-                    $sms_customerinfo = "\n" . trans('Customer:') . ' ' . $requestor;
+
+                    $mailfrom = $LMS->DetermineSenderEmail($user['email'], $LMS->GetQueueEmail($ticket['queue']), $ticket['mailfrom']);
+
+                    $ticketdata = $LMS->GetTicketContents($event['ticketid']);
+
+                    $headers['From'] = $mailfname.' <'.$mailfrom.'>';
+                    $headers['Reply-To'] = $headers['From'];
+                    $headers['Message-ID'] = $LMS->GetLastMessageID();
+
+                    $queuedata = $LMS->GetQueue($ticket['queue']);
+
+                    if ($ticket['customerid']) {
+                        $info = $LMS->GetCustomer($ticket['customerid'], true);
+
+                        $emails = array_map(function ($contact) {
+                            return $contact['fullname'];
+                        }, $LMS->GetCustomerContacts($ticket['customerid'], CONTACT_EMAIL));
+                        $phones = array_map(function ($contact) {
+                            return $contact['fullname'];
+                        }, $LMS->GetCustomerContacts($ticket['customerid'], CONTACT_LANDLINE | CONTACT_MOBILE));
+
+                        if (ConfigHelper::checkConfig('phpui.helpdesk_customerinfo')) {
+                            $params = array(
+                                'id' => $id,
+                                'customerid' => $ticket['customerid'],
+                                'customer' => $info,
+                                'emails' => $emails,
+                                'phones' => $phones,
+                            );
+                            $mail_customerinfo = $LMS->ReplaceNotificationCustomerSymbols(
+                                ConfigHelper::getConfig('phpui.helpdesk_customerinfo_mail_body'),
+                                $params
+                            );
+                            $sms_customerinfo = $LMS->ReplaceNotificationCustomerSymbols(
+                                ConfigHelper::getConfig('phpui.helpdesk_customerinfo_sms_body'),
+                                $params
+                            );
+                        }
+
+                        if (isset($event['customernotify']) && !empty($queuedata['newticketsubject']) && !empty($queuedata['newticketbody'])
+                            && !empty($emails)) {
+                            $custmail_subject = $queuedata['newticketsubject'];
+                            $custmail_subject = str_replace('%tid', $id, $custmail_subject);
+                            $custmail_subject = str_replace('%title', $ticket['subject'], $custmail_subject);
+                            $custmail_body = $queuedata['newticketbody'];
+                            $custmail_body = str_replace('%tid', $id, $custmail_body);
+                            $custmail_body = str_replace('%cid', $ticket['customerid'], $custmail_body);
+                            $custmail_body = str_replace('%pin', $info['pin'], $custmail_body);
+                            $custmail_body = str_replace('%customername', $info['customername'], $custmail_body);
+                            $custmail_body = str_replace('%title', $ticket['subject'], $custmail_body);
+                            $custmail_headers = array(
+                                'From' => $headers['From'],
+                                'Reply-To' => $headers['From'],
+                                'Subject' => $custmail_subject,
+                            );
+                            foreach ($emails as $email) {
+                                $custmail_headers['To'] = '<' . $info['email'] . '>';
+                                $LMS->SendMail($email, $custmail_headers, $custmail_body);
+                            }
+                        }
+                    } elseif (!empty($requestor) && ConfigHelper::checkConfig('phpui.helpdesk_customerinfo')) {
+                        $mail_customerinfo = "\n\n-- \n" . trans('Customer:') . ' ' . $requestor;
+                        $sms_customerinfo = "\n" . trans('Customer:') . ' ' . $requestor;
+                    }
+
+                    $params = array(
+                        'id' => $event['ticketid'],
+                        'queue' => $queuedata['name'],
+                        'customerid' => $ticket['customerid'],
+                        'status' => $ticketdata['status'],
+                        'categories' => $ticketdata['categorynames'],
+                        'priority' => $RT_PRIORITIES[$ticketdata['priority']],
+                        'subject' => $ticket['subject'],
+                        'body' => $ticket['body'],
+                    );
+                    $headers['Subject'] = $LMS->ReplaceNotificationSymbols(ConfigHelper::getConfig('phpui.helpdesk_notification_mail_subject'), $params);
+                    $params['customerinfo'] = isset($mail_customerinfo) ? $mail_customerinfo : null;
+                    $body = $LMS->ReplaceNotificationSymbols(ConfigHelper::getConfig('phpui.helpdesk_notification_mail_body'), $params);
+                    $params['customerinfo'] = isset($sms_customerinfo) ? $sms_customerinfo : null;
+                    $sms_body = $LMS->ReplaceNotificationSymbols(ConfigHelper::getConfig('phpui.helpdesk_notification_sms_body'), $params);
+
+                    $LMS->NotifyUsers(array(
+                        'queue' => $ticket['queue'],
+                        'mail_headers' => $headers,
+                        'mail_body' => $body,
+                        'sms_body' => $sms_body,
+                    ));
                 }
-
-                $params = array(
-                    'id' => $event['ticketid'],
-                    'queue' => $queuedata['name'],
-                    'customerid' => $ticket['customerid'],
-                    'status' => $ticketdata['status'],
-                    'categories' => $ticketdata['categorynames'],
-                    'priority' => $RT_PRIORITIES[$ticketdata['priority']],
-                    'subject' => $ticket['subject'],
-                    'body' => $ticket['body'],
-                );
-                $headers['Subject'] = $LMS->ReplaceNotificationSymbols(ConfigHelper::getConfig('phpui.helpdesk_notification_mail_subject'), $params);
-                $params['customerinfo'] = isset($mail_customerinfo) ? $mail_customerinfo : null;
-                $body = $LMS->ReplaceNotificationSymbols(ConfigHelper::getConfig('phpui.helpdesk_notification_mail_body'), $params);
-                $params['customerinfo'] = isset($sms_customerinfo) ? $sms_customerinfo : null;
-                $sms_body = $LMS->ReplaceNotificationSymbols(ConfigHelper::getConfig('phpui.helpdesk_notification_sms_body'), $params);
-
-                $LMS->NotifyUsers(array(
-                    'queue' => $ticket['queue'],
-                    'mail_headers' => $headers,
-                    'mail_body' => $body,
-                    'sms_body' => $sms_body,
-                ));
-            }
+                break;
+            case 'none':
+                $event['ticketid'] = null;
+                break;
         }
 
         $event['date'] = $date;
@@ -332,25 +350,27 @@ if (isset($_POST['event'])) {
 } else {
     if (isset($_GET['id']) && intval($_GET['id'])) {
         $event = $LMS->GetEvent($_GET['id']);
+        if (!empty($event['ticketid'])) {
+            $event['helpdesk'] = 'assign';
+            $eventticketid = $event['ticketid'];
+        }
 
         if (empty($event['enddate'])) {
             $event['enddate'] = $event['date'];
         }
         $event['begin'] = date('Y/m/d H:i', $event['date'] + $event['begintime']);
         $event['end'] = date('Y/m/d H:i', $event['enddate'] + ($event['endtime'] == 86400 ? 0 : $event['endtime']));
-
-        $event['ticketid'] = 0;
     } else {
         $event['overlapwarned'] = 0;
         $event['wholedays'] = false;
         $event['date'] = isset($event['date']) ? $event['date'] : $SESSION->get('edate');
     }
     if (!isset($eventticketid)) {
-        $event['helpdesk'] = ConfigHelper::checkConfig('phpui.default_event_ticket_assignment');
+        $event['helpdesk'] = ConfigHelper::checkConfig('phpui.default_event_ticket_assignment') ? 'new' : 'none';
     }
 }
 
-if (isset($event['helpdesk'])) {
+if ($event['helpdesk'] == 'new') {
     $netnodelist = $LMS->GetNetNodeList(array(), 'name');
     unset($netnodelist['total']);
     unset($netnodelist['order']);
